# ccfes-control

./: .gitignore  .pylintrc  HINTS.md  LICENSE  README.md  __main__.py  example_low_level.py  main.py  pyproject.toml
.github/.workflows/: publish-to-pypi.yml
.github/workflows/: build-validation.yml  publish-to-pypi.yml  publish-to-test-pypi.yml
ccfes-setup/ccfes-setup-7-11/: EMG-FES_ghost.txt  README.md  dyscom_runlive2.py  mid_runlive.py
ccfes-setup/ccfes-setup-7-17/: EMG-FES_ghost.txt  README.txt  both_live.py  ccfes-functions.py  dyscom_runlive3.py  midlevel_runlive2.py  plot-emg.py
ccfes-setup/ccfes-setup-7-19/: README.txt  both_live.py  both_live_raw.py  ccfes_functions.py  ccfes_runlive.py  dyscom_runlive2.py  dyscom_runlive3.py  dyscom_runlive4.py  dyscom_runlive5.py  midlevel_runlive2.py  plot_emg.py
ccfes-setup/ccfes-setup-7-25/: 7-25-1.csv  README.txt  plot_emg.py  smpt_GUI_csv.py  smpt_filtered.py
ccfes-setup/ccfes-setup-7-29/: README.txt  ccfes_runlive.py  emg_filter_sci_sound.py  plot_ccfes.py  plot_emg.py  smpt_GUI_csv.py  smpt_debug.py  smpt_filtered.py
examples/: __init__.py  example_general.py  example_low_level.py  example_low_level_plot.py  example_mid_level.py  example_utils.py  requirements.txt
examples/dyscom/: .csv  7-21-10.csv  7-21-12.csv  7-21-14.csv  7-23-8.csv  7-23-9.csv  __init__.py  dyscom_runlive.py  dyscom_runlive1.py  ex_dys_fpl_csv.py  plot_emg.py  (+8 more)
src/: __main__.py  commands.py  device.py  device_general.py  device_p24.py  layer.py  layer_general.py  layer_mid_level.py  packet.py  packet_factory.py  protocol.py
(+221 files in other folders)
