[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "science_mode_4"
version = "0.0.14"
authors = [
  { name="Marc Hofmann", email="marc-hofmann@gmx.de" },
]
description = "Native ScienceMode4 protocol implementation"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = "MIT"
license-files = [
  "LICENSE"
]
dependencies = [
  "pyserial",
  "pyusb",
  "libusb-package"
]

[project.urls]
Homepage = "https://github.com/nextroundwinner/ScienceModePython"